--- a/src/components/projects/responsiveWeb/responsiveWeb.css
+++ b/src/components/projects/responsiveWeb/responsiveWeb.css
@@ -4,4 +4,6 @@
     max-height: 360px;
     max-width: 100%;
     height: auto;
+    /* filter: drop-shadow(5px 5px 5px #fff); */
+    filter: grayscale(100%);
 }
