--- a/src/components/joystick/joystick.css
+++ b/src/components/joystick/joystick.css
@@ -9,7 +9,7 @@
     width: 10px;
     left: 50%;
     background-color: black;
-    box-shadow: inset 1px -10px 10px #fff;
+    box-shadow: inset 1px -10px 10px rgb(109, 109, 109);
     
 }
 #joystick{
@@ -25,6 +25,9 @@
     z-index: 100;
     height: 90%;
     width: 90%;
+    filter: drop-shadow(0px 10px 10px #312130) drop-shadow(0px -2px 5px #312130);
+    
+
 }
 
 @media (min-width: 500px){
@@ -33,7 +36,7 @@
     }
 }
 
-#startButton:hover{
+.exitButtons:hover{
     cursor: pointer;
     fill:black;
 }
@@ -43,5 +46,5 @@
 .nextProjButton:hover, .prevProjButton:hover{
     cursor: pointer;
     fill:black;
-    height: 15%;
+    height: 14%;
 }
