--- a/src/components/joystick/joystick.css
+++ b/src/components/joystick/joystick.css
@@ -1,5 +1,5 @@
 #joystick-container{
-    background-color:   white;
+    background-color:   whitesmoke;
     display: flex;
 }
 
@@ -25,7 +25,7 @@
     z-index: 100;
     height: 90%;
     width: 90%;
-    filter: drop-shadow(0px 10px 10px #312130) drop-shadow(0px -2px 5px #312130);
+    filter: drop-shadow(0px 10px 10px #31213077) drop-shadow(0px -2px 5px #31213077);
     
 
 }
@@ -34,6 +34,9 @@
     #joystick svg{
         padding-top: 30px;
     }
+}
+.exitButtons, .nextProjButton, .prevProjButton{
+    fill: #502a66;
 }
 
 .exitButtons:hover{
