--- a/src/components/pages/landing/landing.css
+++ b/src/components/pages/landing/landing.css
@@ -10,9 +10,10 @@
 
 /*ArrowDown*/
 #arrow-down{
-    position: absolute;
-    top: 90%;
-    left: 46%;
+    position: relative ;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, -100%);
     animation: blink 1.5s linear reverse infinite;
 }
 
