--- a/src/components/pages/landing/landing.css
+++ b/src/components/pages/landing/landing.css
@@ -8,6 +8,11 @@
     font-family: 'arcadeClassic', monospace;
 }
 
+.tachado{
+    text-decoration: line-through;
+}
+
+
 /*ArrowDown*/
 #arrow-down{
     position: relative ;
@@ -21,7 +26,7 @@
 .header-container{
     padding: 0 10% 0 10%;
     width: 100%;
-    height: 100vh;
+    height: 98vh;
     display: grid;
     grid-template-columns: 1.8fr 1fr;
     font-family: monospace;
@@ -29,7 +34,7 @@
 }
 
 .left-column{
-    height: 100vh;
+    height: 98vh;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
