--- a/src/components/pages/projects/monitor/monitor.css
+++ b/src/components/pages/projects/monitor/monitor.css
@@ -44,7 +44,7 @@
     }
 }
 
-.monitorTitle{
+.monitor-title{
     margin-top: 20px;
     color: gainsboro;
     font-size: clamp(12px, 3vw, 10px);;
@@ -54,17 +54,17 @@
 
 
 
-.monitorInfo{
+.monitor-info{
     z-index: 100;
    text-align: center;
    font-size: 20px;
     
 }
-.monitorInfo a, .monitorInfo a:hover{
+.monitor-info a, .monitor-info a:hover{
     color: white;
 }
 
-.monitorInfo span{
+.monitor-info span{
     padding-top: 10px;
     font-family: monospace;
     color: gray;
@@ -72,14 +72,14 @@
 }
 
 @media(min-width:640px){
-    .monitorInfo{
+    .monitor-info{
         font-size: 24px;
     }
-    .monitorInfo span{
+    .monitor-info span{
         font-size: 16px;
     }
 }
-.monitorContent{
+.monitor-content{
     margin: 10px 0px;
     display:flex;
     flex-direction: column;
