--- a/src/components/pages/projects/projects/responsiveWeb/responsiveWeb.css
+++ b/src/components/pages/projects/projects/responsiveWeb/responsiveWeb.css
@@ -1,4 +1,4 @@
-#responsiveWeb img{
+#responsiveWeb-container img{
     display: flex;
     align-self: center;
     max-height: 360px;
@@ -8,7 +8,7 @@
     filter: grayscale(100%);
 }
 @media(min-width:1200px){
-    #responsiveWeb img{
+    #responsiveWeb-container img{
         max-height: 400px;
     }
 }
