--- a/src/components/pages/landing/landing.css
+++ b/src/components/pages/landing/landing.css
@@ -1,280 +1,318 @@
 /*general values*/
-.main-container{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+.main-container {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
-.arcade-font{
-    font-family: 'arcadeClassic', monospace;
-}
-
-.tachado{
-    text-decoration: line-through;
+.arcade-font {
+  font-family: "arcadeClassic", monospace;
 }
 
+.tachado {
+  text-decoration: line-through;
+}
 
 /*ArrowDown*/
-#arrow-down{
-    position: relative ;
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%, -100%);
-    animation: blink 1.5s linear reverse infinite;
+#arrow-down {
+  position: absolute;
+  bottom: 8%;
+  left: 50%;
+  transform: translateX(-50%);
+  animation: blink 1.5s linear reverse infinite;
 }
 
 /*Header*/
-.header-container{
-    padding: 0 10% 0 10%;
-    width: 100%;
-    height: 98vh;
-    display: grid;
-    grid-template-columns: 1.8fr 1fr;
-    font-family: monospace;
-    font-size: max(2vw,24px);
+.header-container {
+  padding: 0 10% 0 10%;
+  width: 100%;
+  height: 98vh;
+  display: grid;
+  grid-template-columns: 1.8fr 1fr;
+  font-family: monospace;
+  font-size: max(2vw, 24px);
+  position: relative;
+}
+#pacman {
+  position: absolute;
+  bottom: 0;
+  width: 36px;
+  opacity: 0.2;
+  z-index: -1;
+  animation: moveGhost 3s linear infinite 2s;
+  filter: drop-shadow(1px 0 0px yellow);
 }
 
-.left-column{
-    height: 98vh;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    
+#pacman-ghost {
+  position: absolute;
+  bottom: 0;
+  width: 36px;
+  opacity: 0.2;
+  z-index: -1;
+  animation: moveGhost 3s linear infinite 1s;
+  filter: drop-shadow(1px 0 0px crimson);
+}
+#pacman-ghost2 {
+  display: none;
+  position: absolute;
+  bottom: 0;
+  width: 36px;
+  opacity: 0.2;
+  z-index: -1;
+  animation: moveGhost 3s linear infinite;
+  filter: drop-shadow(1px 0 0px blue);
 }
 
-.left-column h3, .left-column p {
-    font-size: smaller;
-    margin-top: 5%;
-    text-align: left;
+@keyframes moveGhost {
+  from {
+    right: 0%;
+  }
+  to {
+    right: 100%;
+  }
 }
 
+@media (min-width: 1000px) {
+  #pacman {
+    width: 48px;
+    animation: moveGhost 15s linear infinite 4s;
+  }
+  #pacman-ghost {
+    width: 48px;
+    animation: moveGhost 15s linear infinite 2s;
+  }
+  #pacman-ghost2 {
+    display: block;
+    width: 48px;
+    animation: moveGhost 15s linear infinite;
+  }
+}
 
+.left-column {
+  height: 98vh;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.left-column h3,
+.left-column p {
+  font-size: smaller;
+  margin-top: 5%;
+  text-align: left;
+}
 
 .left-column a {
-    padding-left: 3px;
-    padding-right: 3px;
-    text-decoration: none;
-    color: #80567C;
+  padding-left: 3px;
+  padding-right: 3px;
+  text-decoration: none;
+  color: #80567c;
 }
 
-.left-column a:hover{
-    background-color: #80567C;
-    border-radius: 5px;
-    color:white;
+.left-column a:hover {
+  background-color: #80567c;
+  border-radius: 5px;
+  color: white;
 }
 
 .right-column {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
-.right-column img{
-    border-radius: 50%;
-    max-width: 300px;
-   width: 70%;
-    height: auto;
+.right-column img {
+  border-radius: 50%;
+  max-width: 300px;
+  width: 70%;
+  height: auto;
 }
-
 
 /*header media queries*/
-@media (min-width:1700px){
-    .header-container{
-        font-size: 40px;
-        height: 100vh;
-    }
-    .left-column{
-        height: 100vh;
-    }
-    .right-column{
-        height: 100vh;
-    }
+@media (min-width: 1700px) {
+  .header-container {
+    font-size: 40px;
+    height: 100vh;
+  }
+  .left-column {
+    height: 100vh;
+  }
+  .right-column {
+    height: 100vh;
+  }
 }
 
-@media(min-width:1200px){
-    .right-column img{
-        width: 100%;
-    }
+@media (min-width: 1200px) {
+  .right-column img {
+    width: 100%;
+  }
 }
 
 /*Skills & projects section*/
-.skills-container{
-    padding: 0 10% 0 10%;
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 1fr 0.5fr;
-    grid-template-areas: "about about" "skills skills" "projects projects";
-    font-family: monospace;
-    background-color: whitesmoke;
-    row-gap: 0px;
-    column-gap: 10px;
+.skills-container {
+  padding: 0 10% 0 10%;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr 1fr 0.5fr;
+  grid-template-areas: "about about" "skills skills" "projects projects";
+  font-family: monospace;
+  background-color: whitesmoke;
+  row-gap: 0px;
+  column-gap: 10px;
 }
 
-.skills-container div{
-    padding: 20px 0;
-    /* border: 1px solid red; */
-    
-
+.skills-container div {
+  padding: 20px 0;
+  /* border: 1px solid red; */
 }
 
-.skills-container h3{
-    text-align: center;
-    font-size: max(3vw, 36px);
-    margin-bottom: 5px;
+.skills-container h3 {
+  text-align: center;
+  font-size: max(3vw, 36px);
+  margin-bottom: 5px;
 }
 
-
-
-.skills-container p{
-    font-size: max(0.8vw, 16px);
+.skills-container p {
+  font-size: max(0.8vw, 16px);
 }
 
-
-
-.about-me{
-    grid-area: about;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-   
-    
+.about-me {
+  grid-area: about;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .skills {
-    grid-area: skills;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
+  grid-area: skills;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.skills div{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-
+.skills div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .skills div div {
-    margin: 0px 2px 20px 2px;
-    width: 20%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    text-align: center;
-    justify-content: space-between;
-    background-color: #502a66 !important;
-    border-radius: 20px;
-    box-shadow: 3px 8px 1px rgba(0,0, 0, 0.4);
+  margin: 0px 2px 20px 2px;
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: space-between;
+  background-color: #502a66 !important;
+  border-radius: 20px;
+  box-shadow: 3px 8px 1px rgba(0, 0, 0, 0.4);
 }
-@media(min-width:1000px){
-    .skills div div {
-        width: 15%;
-    }
-}
-
-.skills i{
-    font-size: min(4vw, 80px);
-    color: white;
-}
-.skills span{
-    margin-top: 2px;
-    font-size: min(2vw,16px);
-    color: white;
+@media (min-width: 1000px) {
+  .skills div div {
+    width: 15%;
+  }
 }
 
-#communication-icon{
-    --buttonOpacity: 0.9;
-    animation: buttonLike 2.5s ease forwards;
+.skills i {
+  font-size: min(4vw, 80px);
+  color: white;
 }
-#english-icon{
-    --buttonOpacity: 0.9;
-    animation: buttonLike 2.5s ease forwards;
+.skills span {
+  margin-top: 2px;
+  font-size: min(2vw, 16px);
+  color: white;
 }
-#teamwork-icon{
-    --buttonOpacity: 0.85;
-    animation: buttonLike 2.5s ease forwards;
+
+#communication-icon {
+  --buttonOpacity: 0.9;
+  animation: buttonLike 2.5s ease forwards;
 }
-#css-icon{
-    --buttonOpacity: 0.8;
-    animation: buttonLike 2.5s ease forwards;
+#english-icon {
+  --buttonOpacity: 0.9;
+  animation: buttonLike 2.5s ease forwards;
 }
-#html-icon{
-    --buttonOpacity: 0.76;
-    animation: buttonLike 2.5s ease forwards;
+#teamwork-icon {
+  --buttonOpacity: 0.85;
+  animation: buttonLike 2.5s ease forwards;
 }
-#react-icon{
-    --buttonOpacity: 0.73;
-    animation: buttonLike 2.5s ease forwards;
+#css-icon {
+  --buttonOpacity: 0.8;
+  animation: buttonLike 2.5s ease forwards;
 }
-#bootstrap-icon{
-    --buttonOpacity: 0.7;
-    animation: buttonLike 2.5s ease forwards;
+#html-icon {
+  --buttonOpacity: 0.76;
+  animation: buttonLike 2.5s ease forwards;
 }
-#django-icon{
-    --buttonOpacity: 0.69;
-    animation: buttonLike 2.5s ease forwards;
+#react-icon {
+  --buttonOpacity: 0.73;
+  animation: buttonLike 2.5s ease forwards;
 }
-#git-icon{
-    --buttonOpacity: 0.5;
-    animation: buttonLike 2.5s ease forwards;
+#bootstrap-icon {
+  --buttonOpacity: 0.7;
+  animation: buttonLike 2.5s ease forwards;
 }
-#coffee-icon{
-    --buttonOpacity: 0.3;
-    animation: buttonLike 2.5s ease forwards;
+#django-icon {
+  --buttonOpacity: 0.69;
+  animation: buttonLike 2.5s ease forwards;
 }
-#gamedev-icon{
-    --buttonOpacity: 0.35;
-    animation: buttonLike 2.5s ease forwards;
+#git-icon {
+  --buttonOpacity: 0.5;
+  animation: buttonLike 2.5s ease forwards;
 }
-#uxui-icon{
-    --buttonOpacity: 0.25;
-    animation: buttonLike 2.5s ease forwards;
+#coffee-icon {
+  --buttonOpacity: 0.3;
+  animation: buttonLike 2.5s ease forwards;
+}
+#gamedev-icon {
+  --buttonOpacity: 0.35;
+  animation: buttonLike 2.5s ease forwards;
+}
+#uxui-icon {
+  --buttonOpacity: 0.25;
+  animation: buttonLike 2.5s ease forwards;
 }
 
 @keyframes buttonLike {
-    from{
-        opacity: 1;
-        
-        
-    }
-    to{
-        opacity: var(--buttonOpacity)
-
-    }
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: var(--buttonOpacity);
+  }
 }
 
 .projects {
-    grid-area: projects;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    
+  grid-area: projects;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-.projects h5{
-    margin-top: 10px;
-    color: rgb(116, 116, 116);
-    text-align: center;
-    font-size: max(1.7vw, 24px);
-    animation: blink 0.5s ease infinite;
+.projects h5 {
+  margin-top: 10px;
+  color: rgb(116, 116, 116);
+  text-align: center;
+  font-size: max(1.7vw, 24px);
+  animation: blink 0.5s ease infinite;
 }
 
-@keyframes blink{
-    0%{
-        opacity: 0;
-    }
+@keyframes blink {
+  0% {
+    opacity: 0;
+  }
 }
 
-.projects h5 a:visited, .projects h5 a:hover, .projects h5 a:active  {
-    color:rgb(116, 116, 116);
-    text-decoration: none;
+.projects h5 a:visited,
+.projects h5 a:hover,
+.projects h5 a:active {
+  color: rgb(116, 116, 116);
+  text-decoration: none;
 }
-
