--- a/src/components/pages/contact/contact.css
+++ b/src/components/pages/contact/contact.css
@@ -12,7 +12,7 @@
     width: 100%;
     height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 1.8fr;
+    grid-template-columns: 0.5fr 1.8fr;
     font-family: monospace;
     
 }   
@@ -26,7 +26,7 @@
     
 }
 #contact-title{
-    font-size: 70px;
+    font-size: min(20vw,70px);
 }
 
 #contact-text{
