--- a/src/components/pages/landing/landing.css
+++ b/src/components/pages/landing/landing.css
@@ -157,8 +157,8 @@
   height: 100%;
   display: grid;
   grid-template-columns: 2fr 1fr;
-  grid-template-rows: 1fr 1fr 0.5fr;
-  grid-template-areas: "about about" "skills skills" "projects projects";
+  grid-template-rows: 0.4fr 0.2fr 1fr;
+  grid-template-areas: "skills skills" "projects projects" "about about" ;
   font-family: monospace;
   background-color: whitesmoke;
   row-gap: 0px;
@@ -293,7 +293,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .projects h5 {
@@ -310,6 +310,7 @@
   }
 }
 
+.projects h5 a,
 .projects h5 a:visited,
 .projects h5 a:hover,
 .projects h5 a:active {
