--- a/src/components/pages/projects/monitor/monitor.css
+++ b/src/components/pages/projects/monitor/monitor.css
@@ -9,7 +9,7 @@
     border: 30px solid black;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 50px 1fr 50px;
+    grid-template-rows: 50px 0.9fr 50px;
     width: 100%;
    /* display: flex;
    justify-content: center;
@@ -65,7 +65,7 @@
 }
 
 .monitor-info span{
-    padding-top: 10px;
+    /* padding-top: 10px; */
     font-family: monospace;
     color: gray;
     font-size: 12px;
