--- a/src/components/pages/projects/projects/unityHobby/unityHobby.css
+++ b/src/components/pages/projects/projects/unityHobby/unityHobby.css
@@ -1,14 +1,15 @@
 #unityHobby-container img{
+    position: absolute center;
     display: flex;
     align-self: center;
-    max-height: 360px;
+    max-height: 240px;
     max-width: 100%;
     height: auto;
     /* filter: drop-shadow(5px 5px 5px #fff); */
     filter: grayscale(100%);
 }
-@media(min-width:1200px){
+@media(min-height:840px){
     #unityHobby-container img{
-        max-height: 480px;
+        max-height: 400px;
     }
 }
