--- a/src/components/pages/contact/contact.css
+++ b/src/components/pages/contact/contact.css
@@ -1,46 +1,131 @@
-.contact-container{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+.contact-container {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  border-left: 1.3vw solid rgba(171, 192, 143, 0.4);
+  position: relative;
+  overflow: hidden;
+  animation: borderDisappear 1s ease forwards 3.5s;
 }
-.arcade-font{
-    font-family: 'arcadeClassic', monospace;
-}
-
-.contact-header-container{
-    padding: 0 10% 0 10%;
-    width: 100%;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 0.5fr 1.8fr;
-    font-family: monospace;
-    
-}   
-
-.contact-left-column, .contact-right-column{
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
-}
-#contact-title{
-    font-size: min(20vw,70px);
+.arcade-font {
+  font-family: "arcadeClassic", monospace;
 }
 
-#contact-text{
-    margin-top: 5%;
-    font-size:max(2vw,16px);
+#mario-flag {
+  z-index: -1;
+  position: absolute;
+  filter: grayscale(80%);
+  opacity: 0.5;
+  width: 64px;
+  top: 0%;
+  --initialTop: 0%;
+  --finalTop: 50%;
+  animation: marioSlide 3s linear forwards, marioDisappear 1s ease forwards 3.5s;
 }
 
-.contact-options{
-    margin-top: 5%;
+#mario-climbing {
+  z-index: -1;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  filter: grayscale(100%) drop-shadow(1px 0 0px rgba(220, 20, 60, 0.6));
+  opacity: 0.5;
+  width: 64px;
+  left: -2.5vw;
+  top: 30%;
+  --initialTop: 30%;
+  --finalTop: 80%;
+  animation: marioSlide 3s linear forwards, marioDisappear 1s ease forwards 3.5s;
+}
+@media (min-width: 500px) {
+  #mario-climbing {
+    left: -2vw;
+  }
+}
+@media (min-width: 650px) {
+  #mario-climbing {
+    width: 128px;
+    left: -3.5vw;
+  }
+  #mario-flag {
+    width: 108px;
+  }
+}
+@media (min-width: 780px) {
+  #mario-climbing {
+    left: -2.5vw;
+  }
+}
+@media (min-width: 1000px) {
+  #mario-climbing {
+    left: -2vw;
+  }
+}
+@media (min-width: 1200px) {
+  #mario-climbing {
+    left: -1vw;
+  }
 }
 
-.contact-right-column a{
-    color: #80567C;
-    font-size:max(2vw,30px);
-    margin-left: 10px;
+@keyframes marioSlide {
+  from {
+    top: var(--initialTop);
+  }
+  to {
+    top: var(--finalTop);
+  }
 }
 
+@keyframes marioDisappear {
+  from {
+    opacity: 0.5;
+  }
+  to {
+    opacity: 0;
+  }
+}
+@keyframes borderDisappear {
+  from {
+    border-left: 1.3vw solid rgba(171, 192, 143, 0.4);
+  }
+  to {
+    border-left: 1.3vw solid rgba(171, 192, 143, 0);
+  }
+}
+
+.contact-header-container {
+  padding: 0 10% 0 10%;
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 0.5fr 1.8fr;
+  font-family: monospace;
+}
+
+.contact-left-column,
+.contact-right-column {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#contact-title {
+  font-size: min(20vw, 70px);
+}
+
+#contact-text {
+  margin-top: 5%;
+  font-size: max(2vw, 16px);
+}
+
+.contact-options {
+  margin-top: 5%;
+}
+
+.contact-right-column a {
+  color: #80567c;
+  font-size: max(2vw, 30px);
+  margin-left: 10px;
+}
