--- a/src/components/pages/projects/monitor/monitor.css
+++ b/src/components/pages/projects/monitor/monitor.css
@@ -1,89 +1,84 @@
-#monitor-wrapper{
-    background-color: whitesmoke;
-    padding: 10px 10px 0px 10px;
-    
+#monitor-wrapper {
+  background-color: whitesmoke;
+  padding: 10px 10px 0px 10px;
 }
-#monitor{
-    height: 70vh;
-    background-color: rgb(31, 31, 31);
-    border: 30px solid black;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 50px 0.9fr 50px;
-    width: 100%;
-   /* display: flex;
+#monitor {
+  height: 70vh;
+  background-color: rgb(31, 31, 31);
+  border: 30px solid black;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 50px 0.9fr 50px;
+  width: 100%;
+  /* display: flex;
    justify-content: center;
    flex-direction: column;
    text-align: center;
    align-items: space-around; */
-   font-family: 'arcadeClassic', monospace;
-
+  font-family: "arcadeClassic", monospace;
 }
 
-@media(min-width:500px ){
-    #monitor-wrapper{
-        padding: 30px 30px 0px 30px;
-    }
+@media (min-width: 500px) {
+  #monitor-wrapper {
+    padding: 30px 30px 0px 30px;
+  }
 }
-@media(min-width:1200px ){
-    #monitor-wrapper{
-        padding: 50px 50px 0px 50px;
-    }
-}
-
-.fadeIn{
-    animation : fadeIn ease 2s;
+@media (min-width: 1200px) {
+  #monitor-wrapper {
+    padding: 50px 50px 0px 50px;
+  }
 }
 
-@keyframes fadeIn{
-    from{
-        opacity: 0;
-    }
-    to{
-        opacity: 1;
-    }
+.fadeIn {
+  animation: fadeIn ease 2s;
 }
 
-.monitor-title{
-    margin-top: 20px;
-    color: gainsboro;
-    font-size: clamp(12px, 3vw, 10px);;
-    text-align: center;
-    
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
-
-
-.monitor-info{
-    z-index: 100;
-   text-align: center;
-   font-size: 20px;
-    
-}
-.monitor-info a, .monitor-info a:hover{
-    color: white;
+.monitor-title {
+  margin-top: 20px;
+  color: gainsboro;
+  font-size: clamp(12px, 3vw, 10px);
+  text-align: center;
+  letter-spacing: 2px;
 }
 
-.monitor-info span{
-    /* padding-top: 10px; */
-    font-family: monospace;
-    color: gray;
-    font-size: 12px;
+.monitor-info {
+  z-index: 100;
+  text-align: center;
+  font-size: 20px;
+}
+.monitor-info a,
+.monitor-info a:hover {
+  color: white;
 }
 
-@media(min-width:640px){
-    .monitor-info{
-        font-size: 24px;
-    }
-    .monitor-info span{
-        font-size: 16px;
-    }
-}
-.monitor-content{
-    margin: 10px 0px;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+.monitor-info span {
+  /* padding-top: 10px; */
+  font-family: monospace;
+  color: gray;
+  font-size: 12px;
 }
 
+@media (min-width: 640px) {
+  .monitor-info {
+    font-size: 24px;
+  }
+  .monitor-info span {
+    font-size: 16px;
+  }
+}
+.monitor-content {
+  margin: 10px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
