--- a/src/components/pages/projects/projects/apiRest/apiRest.css
+++ b/src/components/pages/projects/projects/apiRest/apiRest.css
@@ -2,11 +2,16 @@
   position: absolute center;
   display: flex;
   align-self: center;
-  max-height: 400px;
+  max-height: 280px;
   max-width: 100%;
   height: auto;
   /* filter: drop-shadow(5px 5px 5px #fff); */
   filter: grayscale(100%);
+}
+@media (min-height: 840px) {
+  #apiRest-container img {
+    max-height: 360px;
+  }
 }
 @media (min-height: 1000px) {
   #apiRest-container img {
